--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "List Heatmap",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "统计日记文件中特定标题下的无序列表数量并以GitHub热图样式显示",
+  "description": "Counts unordered list items under specific headings in daily notes and displays them in GitHub-style heatmap",
   "author": "",
   "authorUrl": "",
   "isDesktopOnly": false
