--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "统计日记文件中特定标题下的无序列表数量并以GitHub热图样式显示",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "dev": "node esbuild.config.cjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.cjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [
@@ -18,15 +18,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "builtin-modules": "^3.2.0",
-    "esbuild": "^0.13.12",
+    "esbuild": "0.14.0",
     "esbuild-plugin-copy": "^1.5.0",
     "obsidian": "latest",
     "tslib": "2.3.1",
-    "typescript": "4.4.4"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "d3": "^7.8.5"
