--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "esbuild-plugin-copy": "^2.1.1",
     "obsidian": "latest",
     "tslib": "2.3.1",
-    "typescript": "4.4.4"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "d3": "^7.8.5"
